Add F2P project for 2024-1-11

--- a/Game_Analytics_D14_Retention_Prediction.ipynb
+++ b/Game_Analytics_D14_Retention_Prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "1wSXmo44_Hod"
    },
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import libraries: Machine Learning\n",
+    "# Import libraries: Machine Learning for Modelling Retention\n",
     "\n",
     "from sklearn.preprocessing import OrdinalEncoder, StandardScaler\n",
     "\n",
